[package]
name = "yclip"
version = "0.3.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
arboard = "3.5.0"
argon2 = "0.5.3"
clap = { version = "4.5.37", features = ["derive"] }
rand = "0.9.1"
snow = "0.9.6"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
zstd = "0.13.3"

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = { version = "0.13.1", features = ["xfixes"] }

[target.'cfg(target_os = "macos")'.dependencies]
x11rb = { version = "0.13.1", features = ["xfixes"] }

[target.'cfg(target_os = "windows")'.dependencies]
ansi_term = "0.12.1"
winapi = { version = "0.3.9", features = ["winuser"] }

[features]
force-secure = []

[profile.release]
codegen-units = 1
lto = "thin"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fuzzing)'] }
