[package]
name = "yclip"
description = "A cross-platform clipboard syncer"
version = "0.4.3"
edition = "2021"
authors = ["Will Cassels <wcassels@protonmail.com>"]
license = "Unlicense"
readme = "README.md"
repository = "https://github.com/wcassels/yclip"

[dependencies]
anyhow = "1.0.98"
arboard = { git = "https://github.com/wcassels/arboard.git", rev = "70c85449840c7ea7378fb5286be81663dd4ba95b" }
argon2 = "0.5.3"
clap = { version = "4.5.37", features = ["derive"] }
enum-map = "2.7.3"
rand = "0.9.1"
rustc-hash = "2.1.1"
snow = "0.9.6"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
zstd = "0.13.3"

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = { version = "0.13.1", features = ["xfixes"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = "0.3.1"

[target.'cfg(target_os = "windows")'.dependencies]
ansi_term = "0.12.1"
winapi = { version = "0.3.9", features = ["winuser"] }

[features]
force-secure = []

[profile.release]
codegen-units = 1
lto = "thin"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fuzzing)'] }
